chore: add plus

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Trevo Zillionaire</title>
+    <title>+Trevo Zillionaire+</title>
     <link rel="icon" type="image/png" sizes="76x76" src="Images/favicon-trevo16x16.png">
 
     <!-- Bootstrap CSS -->
