--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,15 @@
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>+Trevo Zillionaire+</title>
-    <link rel="icon" type="image/png" sizes="76x76" src="Images/favicon-trevo16x16.png">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+    <link rel="icon" type="image/png" sizes="76x76" href="/Images/favicon-trevo16x16.png">
 
     <!-- Custom CSS -->
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>    
     <div id="root"></div>
-     
-    <!-- Bootstrap Bundle JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
+    <!-- React Script -->
+    <script type="module" src="/static/js/main.js"></script>
   </body>
 </html>
