--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Gerencie seus jogos favoritos com o Trevo Zillionaire.">
     <title>+Trevo Zillionaire+</title>
-    <link rel="icon" type="image/png" sizes="76x76" href="/Images/favicon-trevo16x16.png">
+
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/Images/favicon-trevo16x16.png" type="image/png">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link href="/styles.css" rel="stylesheet" type="text/css">
+    <link href="%PUBLIC_URL%/styles.css" rel="stylesheet">
   </head>
   <body>    
     <div id="root"></div>
-
-    <!-- React Script -->
-    <script type="module" src="/static/js/main.js"></script>
+     
+    <!-- Bootstrap Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous" async></script>
   </body>
 </html>
