--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Gerencie seus jogos favoritos com o Trevo Zillionaire.">
-    <title>+Trevo Zillionaire+</title>
+    <title>Trevo Zillionaire</title>
 
     <!-- Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/Images/favicon-trevo16x16.png" type="image/png">
